# cil2cpp

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  hw_stderr.txt  integration_g2.txt  integration_g3.txt  integration_g4.txt  integration_out.txt
compiler/CIL2CPP.CLI/: CIL2CPP.CLI.csproj  Program.cs
compiler/CIL2CPP.Core/: BuildConfiguration.cs  CIL2CPP.Core.csproj
compiler/CIL2CPP.Core/CodeGen/: CppCodeGenerator.Header.cs  CppCodeGenerator.KnownStubs.cs  CppCodeGenerator.Source.cs  CppCodeGenerator.cs  StubAnalyzer.cs
compiler/CIL2CPP.Core/IL/: AssemblyReader.cs  ILInstruction.cs  ResourceExtractor.cs  SequencePointInfo.cs  TypeDefinitionInfo.cs
compiler/CIL2CPP.Core/IR/: CanonicalTypeResolver.cs  CppNameMapper.cs  FeatureSwitchResolver.cs  ICallRegistry.cs  IRBuilder.Attributes.cs  IRBuilder.BclProxy.cs  IRBuilder.Emit.cs  IRBuilder.Generics.cs  IRBuilder.IndexRange.cs  IRBuilder.Methods.cs  IRBuilder.Nullable.cs  IRBuilder.Record.cs  IRBuilder.Thread.cs  IRBuilder.Types.cs  IRBuilder.ValueTuple.cs  IRBuilder.cs  IRCustomAttribute.cs  IRInstruction.cs  IRMethod.cs  IRModule.cs  IRPeepholeOptimizer.cs  IRType.cs  MethodCompilationContext.cs  PInvokeEnums.cs  RdXmlParser.cs  ReachabilityAnalyzer.cs  RuntimeTypeRegistry.cs  StackEntry.cs
compiler/CIL2CPP.Tests/: AssemblyReaderTests.cs  AssemblyResolverTests.cs  AssemblySetTests.cs  BclProxyTests.cs  BuildConfigurationTests.cs  CIL2CPP.Tests.csproj  CppCodeGeneratorTests.cs  CppNameMapperTests.cs  DepsJsonParserTests.cs  ICallRegistryTests.cs  ILInstructionCategoryTests.cs  ILOpcodeCoverageTests.cs  IRBuilderArrayTests.cs  IRBuilderControlFlowTests.cs  IRBuilderCoreTests.cs  IRBuilderFeatureTests.cs  IRBuilderFeatureTests2.cs  IRBuilderFeatureTests3.cs  IRBuilderFeatureTests4.cs  IRBuilderFeaturesTests.cs  IRBuilderGenericsTests.cs  IRBuilderHelloWorldTests.cs  IRBuilderMultiAssemblyTests.cs  IRBuilderTests.cs  IRBuilderTypeSystemTests.cs  IRInstructionTests.cs  IRMethodTests.cs  IRModuleTests.cs  NuGetResolutionTests.cs  RdXmlParserTests.cs  ReachabilityAnalyzerTests.cs  RuntimeLocatorTests.cs  SequencePointInfoTests.cs  SimdHandlingTests.cs  TypeDefinitionInfoTests.cs
docs/: architecture.md  architecture.zh-CN.md  capabilities.md  capabilities.zh-CN.md  goals.md  goals.zh-CN.md  lessons.md  lessons.zh-CN.md  phase_v1_analysis.md  roadmap.md  roadmap.zh-CN.md  status.md  tools.md  tools.zh-CN.md
runtime/: CMakeLists.txt
runtime/cmake/: cil2cppConfig.cmake.in
runtime/include/cil2cpp/: array.h  array_interfaces.h  assembly.h  async_enumerable.h  boxing.h  cancellation.h  checked.h  cil2cpp.h  delegate.h  eventsource.h  exception.h  gc.h  gc_allocator.h  gchandle.h  globalization.h  globalization_interop.h  icall.h  interop.h  interop_stubs.h  io.h  iocp.h  memberinfo.h  object.h  reflection.h  safe_handle.h  string.h  task.h  threading.h  threadpool.h  type_info.h  typed_reference.h  types.h  unicode.h  waithandle.h
runtime/include/cil2cpp/bcl/: System.Console.h  System.Object.h  System.String.h
runtime/src/: runtime.cpp  typed_reference.cpp
runtime/src/async/: cancellation.cpp  hill_climbing.cpp  hill_climbing.h  iocp.cpp  task.cpp  threadpool.cpp
runtime/src/bcl/: System.Array.cpp  System.Console.cpp  System.Delegate.cpp  System.MdArray.cpp  System.Object.cpp  System.String.cpp  core_methods.cpp
runtime/src/collections/: dictionary.cpp  list.cpp
runtime/src/exception/: exception.cpp
runtime/src/gc/: gc.cpp  gchandle.cpp
runtime/src/globalization/: globalization.cpp
runtime/src/icall/: ascii.cpp  icall.cpp  math.cpp  span_helpers.cpp  throw_helper.cpp  unicode_utility.cpp
runtime/src/interop/: compression_interop.cpp  globalization_interop.cpp  interop_platform.cpp  marshal.cpp
runtime/src/io/: directory.cpp  file.cpp  io_utils.h  path.cpp
runtime/src/reflection/: assembly.cpp  memberinfo.cpp  type.cpp
runtime/src/threading/: interlocked.cpp  monitor.cpp  thread.cpp  waithandle.cpp
runtime/src/type_system/: type_info.cpp
runtime/src/unicode/: icu_bridge.cpp
runtime/tests/: CMakeLists.txt  test_array.cpp  test_async.cpp  test_boxing.cpp  test_checked.cpp  test_collections.cpp  test_console.cpp  test_delegate.cpp  test_exception.cpp  test_gc.cpp  test_globalization.cpp  test_hill_climbing.cpp  test_io.cpp  test_memberinfo.cpp  test_object.cpp  test_reflection.cpp  test_string.cpp  test_stubs.cpp  test_threading.cpp  test_type_system.cpp  test_typed_reference.cpp  test_unicode.cpp
tests/CompressionTest/: Program.cs
tests/ConfigTest/: ConfigTest.csproj  Program.cs
tests/DITest/: DITest.csproj  Program.cs
tests/DateTimeTest/: Program.cs
tests/DecimalTest/: Program.cs
tests/DirTest/: Program.cs
tests/FeatureTest/: Program.cs
tests/FileStreamTest/: Program.cs
tests/FluentValidationTest/: FluentValidationTest.csproj  Program.cs
tests/GuardClausesTest/: Program.cs
tests/HashidsTest/: HashidsTest.csproj  Program.cs
tests/HealthChecker/: HealthChecker.csproj  Program.cs  expected_output.txt
tests/HelloWorld/: Program.cs
tests/HttpGetTest/: Program.cs
tests/HttpTest/: Program.cs
tests/HttpsGetTest/: Program.cs
tests/HumanizerTest/: Program.cs
tests/JsonSGTest/: JsonSGTest.csproj  Program.cs
tests/MiniCsvTool/: Program.cs  expected_output.txt
tests/MiniServiceApp/: MiniServiceApp.csproj  Program.cs  expected_output.txt
tests/MultiAssemblyTest/: MultiAssemblyTest.csproj
tests/NuGetSimpleTest/: Program.cs
tests/PInvokeTest/: PInvokeTest.csproj  Program.cs
tests/PollyTest/: PollyTest.csproj  Program.cs
tests/RegexTest/: Program.cs
tests/SerilogTest/: Program.cs  SerilogTest.csproj
tests/SlugifyTest/: Program.cs  SlugifyTest.csproj
tests/SocketTest/: Program.cs
tests/StatelessTest/: Program.cs  StatelessTest.csproj  expected_output.txt
tests/SystemIOTest/: Program.cs
tests/TodoManager/: Program.cs  TodoManager.csproj  expected_output.txt
tests/ValidationApp/: Program.cs
tests/baselines/: stub_budget.json
tests/integration/: run_pipeline.ps1
tools/: dev.py  instrument.py  integration_defs.py  integration_runner.py
(+10 files in other folders)
